--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "url": "https://github.com/Jadgptw/rsschool-codejam/issues"
   },
   "devDependencies": {
+    "eslint": "^5.8.0",
+    "eslint-config-airbnb-base": "^13.1.0",
     "mocha": "^5.2.0"
   },
   "homepage": "https://github.com/Jadgptw/rsschool-codejam#readme"
